 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.5rc1

 - [ZBX-3673] fixed processing of operators & and | in trigger and calculated items expressions (Sasha)
 - [ZBX-3660] fixed macro resolving in map labels (Vedmak)
 - [ZBX-3659] API exists() methods now return true/false instead of true/error (KB)
 - [ZBX-2997] added global regular expression to be sent to proxies (for use with log, logrt and eventlog items) (rudolfs)
 - [ZBX-1907] changed logging  - when a proxy fails to connect to the server it logs "Still unable to connect" message max once a minute (rudolfs)
 - [ZBX-3548] added IPV6_V6ONLY flag (where defined) for binding IPv4 and IPv6 interfaces separately (rudolfs)
 - [ZBX-3626] fixed bugs on map export: duplicate image decoding and duplicate map elements insertation; thanks to Takanori Suzuki (KB)
 - [ZBX-3453] improve performance of cpu collector (Sasha)
 - [ZBX-3610] fixed active agent full buffer bug - stop processing active checks till the buffer is sent (rudolfs)
 - [ZBX-3566] fixed error in administration->notifications and added a hint when no mediatypes are defined (KB)
 - [ZBX-3628] fixed server crash while processing notification messages with an already deleted trigger (Sasha)
 - [ZBX-3075] fixed a regex bug with zero-length strings (rudolfs)
 - [ZBX-3621] changed the maximum number of processes for Zabbix daemons (asaveljevs)
 - [ZBXNEXT-448] added trigger function logeventid that matches the last event ID to a regex (rudolfs)
 - [ZBX-1419] improve and fix database upgrade patches for older versions (Richlv)
 - [ZBX-3576] fixed showing triggers with disabled items in monitoring (Vedmak)