@@ -22,7 +22,6 @@
 #include "evalfunc.h"
 #include "db.h"
 #include "log.h"
-#include "zlog.h"
 #include "zbxalgo.h"
 
 /******************************************************************************
@@ -2762,7 +2761,6 @@ error:
 	zbx_free(out);
 
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s() error:'%s'", __function_name, error);
-	zabbix_syslog("%s", error);
 
 	return FAIL;
 }
