@@ -23,7 +23,6 @@
 #include "cfg.h"
 #include "db.h"
 #include "log.h"
-#include "zlog.h"
 
 /******************************************************************************
  *                                                                            *
